docs: deployment CLI, GET /version, submit-deposit rename
Document the `just stage` launcher and the Docker-covers-non-Nix path, the new
`GET /version` endpoint, the JDK-25 image base, and the renamed commands.